--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
-  "keywords": [],
-  "author": "",
+  "author": "LC",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/image": "^2.0.32",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/theme": "^2.2.11",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^11.11.9",
     "next": "^15.0.0",
     "nextra": "^3.0.15",
     "nextra-theme-docs": "^3.0.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "remark-mdx-disable-explicit-jsx": "^0.1.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.8",
     "@types/react": "^18.3.11",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
 }
